objects/FLODocs__Search_Clean_up_Rule__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__All_Inactive_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Inactive Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Archive_Date__c</fullName>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Owner_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Owner(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Roles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Scheduled_Searches__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exclude Scheduled Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Search_That_Send_Triggered_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Search That Send Triggered Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Searches_Available_As_Sublist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Searches Available As Sublist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exclude_Searches_Less_Than_A_Month_Old__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exclude Reports Less Than A Month Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Execution_Date__c</fullName>
        <description>Date Time when the archiving/deletion was made</description>
        <inlineHelpText>Date Time when the archiving/deletion was made</inlineHelpText>
        <label>Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exlcude_Private_Searches__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exlcude Private Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Months_Since_Last_Used_Retained_Restored__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Months Since Last Used,Retained/Restored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Notification_Sent__c</fullName>
        <label>Notification Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Notify_Search_Owners_Prior_to_Archive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Search Owners Prior to Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Notify_Search_Users_Prior_to_Archive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Search Users Prior to Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Overview__c</fullName>
        <description>Search Clean Up Rule Overview</description>
        <inlineHelpText>Search Clean Up Rule Overview</inlineHelpText>
        <label>Overview</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__RunNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RunNow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Name__c</fullName>
        <label>Report Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_ScriptID__c</fullName>
        <label>Report API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Notice Period</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Clean-up Rule</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>FLODocs__Description__c</columns>
        <columns>FLODocs__Search_Name__c</columns>
        <columns>FLODocs__Automatic__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Clean-up Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>